--- a/index.html
+++ b/index.html
@@ -114,93 +114,98 @@
     </div>
 
     <div class="modal" id="new-appointment-modal">
-      <div class="modal-header">
-        <img src="./src/assets/icons/close.svg" alt="Close" class="close" />
-        <h2>Book a visit</h2>
-        <p>Fill in the customer's details to schedule an appointment:</p>
-      </div>
       <div class="modal-content">
-        <form>
-          <fieldset>
-            <label for="client-name">Pet owner’s name</label>
-            <div class="input-wrapper">
-              <img src="./src/assets/icons/user.svg" />
-              <input
-                type="text"
-                name="client-name"
-                id="client-name"
-                placeholder="Anne Smith"
-              />
-            </div>
-          </fieldset>
-
-          <fieldset>
-            <label for="pet-name">Pet name</label>
-            <div class="input-wrapper">
-              <img src="./src/assets/icons/pet-paw.svg" />
-              <input
-                type="text"
-                name="pet-name"
-                id="pet-name"
-                placeholder="Cheddar"
-              />
-            </div>
-          </fieldset>
-
-          <fieldset>
-            <label for="phone">Phone</label>
-            <div class="input-wrapper">
-              <img src="./src/assets/icons/phone.svg" alt="Phone" />
-              <input
-                type="text"
-                name="phone"
-                id="phone"
-                placeholder="(00) 000000-0000"
-              />
-            </div>
-          </fieldset>
-
-          <fieldset>
-            <label for="service-description">Service Description</label>
-            <div class="input-wrapper">
-              <textarea
-                name="service-description"
-                id="service-description"
-                placeholder="Nail Cutting"
-                rows="2"
-              >
-              </textarea>
-            </div>
-          </fieldset>
-
-          <fieldset class="desktop-flex">
-            <div>
-              <label for="appointment-date">Date</label>
+        <div class="modal-header">
+          <img src="./src/assets/icons/close.svg" alt="Close" class="close" />
+          <h2>Book a visit</h2>
+          <p>Fill in the customer's details to schedule an appointment:</p>
+        </div>
+        <div class="modal-body">
+          <form>
+            <fieldset>
+              <label for="client-name">Pet owner’s name</label>
               <div class="input-wrapper">
-                <img src="./src/assets/icons/calender.svg" alt="Pick a date" />
+                <img src="./src/assets/icons/user.svg" />
                 <input
-                  type="date"
-                  name="appointment-date"
-                  id="appointment-date"
+                  type="text"
+                  name="client-name"
+                  id="client-name"
+                  placeholder="Anne Smith"
                 />
               </div>
-            </div>
-            <div>
-              <label for="appointment-hour">Hour</label>
+            </fieldset>
+
+            <fieldset>
+              <label for="pet-name">Pet name</label>
               <div class="input-wrapper">
-                <img src="./src/assets/icons/clock.svg" alt="Choose a hour" />
+                <img src="./src/assets/icons/pet-paw.svg" />
                 <input
-                  type="time"
-                  name="appointment-hour"
-                  id="appointment-hour"
+                  type="text"
+                  name="pet-name"
+                  id="pet-name"
+                  placeholder="Cheddar"
                 />
               </div>
+            </fieldset>
+
+            <fieldset>
+              <label for="phone">Phone</label>
+              <div class="input-wrapper">
+                <img src="./src/assets/icons/phone.svg" alt="Phone" />
+                <input
+                  type="text"
+                  name="phone"
+                  id="phone"
+                  placeholder="(00) 000000-0000"
+                />
+              </div>
+            </fieldset>
+
+            <fieldset>
+              <label for="service-description">Service Description</label>
+              <div class="input-wrapper">
+                <textarea
+                  name="service-description"
+                  id="service-description"
+                  placeholder="Nail Cutting"
+                  rows="2"
+                >
+                </textarea>
+              </div>
+            </fieldset>
+
+            <fieldset class="desktop-flex">
+              <div>
+                <label for="appointment-date">Date</label>
+                <div class="input-wrapper">
+                  <img
+                    src="./src/assets/icons/calender.svg"
+                    alt="Pick a date"
+                  />
+                  <input
+                    type="date"
+                    name="appointment-date"
+                    id="appointment-date"
+                  />
+                </div>
+              </div>
+              <div>
+                <label for="appointment-hour">Hour</label>
+                <div class="input-wrapper">
+                  <img src="./src/assets/icons/clock.svg" alt="Choose a hour" />
+                  <input
+                    type="time"
+                    name="appointment-hour"
+                    id="appointment-hour"
+                  />
+                </div>
+              </div>
+            </fieldset>
+            <div>
+              <button type="submit">Book</button>
             </div>
-          </fieldset>
-          <div>
-            <button type="submit">Book</button>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </body>
