add select hour to form and opening hours

--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@
                 <label for="appointment-hour">Hour</label>
                 <div class="input-wrapper">
                   <img src="./src/assets/icons/clock.svg" alt="Choose a hour" />
-                  <input
-                    type="time"
+                  <select
                     name="appointment-hour"
                     id="appointment-hour"
-                  />
+                  ></select>
                 </div>
               </div>
             </fieldset>
