--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                   name="client-name"
                   id="client-name"
                   placeholder="Anne Smith"
+                  required
                 />
               </div>
             </fieldset>
@@ -141,6 +142,7 @@
                   name="pet-name"
                   id="pet-name"
                   placeholder="Cheddar"
+                  required
                 />
               </div>
             </fieldset>
@@ -154,6 +156,7 @@
                   name="phone"
                   id="phone"
                   placeholder="(00) 000000-0000"
+                  required
                 />
               </div>
             </fieldset>
@@ -166,8 +169,8 @@
                   id="service-description"
                   placeholder="Nail Cutting"
                   rows="2"
-                >
-                </textarea>
+                  required
+                ></textarea>
               </div>
             </fieldset>
 
@@ -183,6 +186,7 @@
                     type="date"
                     name="appointment-date"
                     id="appointment-date"
+                    required
                   />
                 </div>
               </div>
@@ -193,6 +197,7 @@
                   <select
                     name="appointment-hour"
                     id="appointment-hour"
+                    required
                   ></select>
                 </div>
               </div>
